update organization to org.jetbrains, build with sbt 1.0, cross-publish to 0.13/1.0, dynamic versioning, auto-publish, update scripted tests