@@ -1,36 +1,19 @@
-import bintray.Keys._
-import com.typesafe.sbt.SbtGit._
+name := "sbt-idea-plugin"
+organization := "org.jetbrains"
+sbtPlugin := true
+licenses += ("MIT", url("http://opensource.org/licenses/MIT"))
 
+scalacOptions ++= Seq("-deprecation", "-feature")
 
-lazy val commonSettings = Seq(
-  name         := "sbt-idea-plugin",
-  organization := "com.dancingrobot84",
-  sbtPlugin    := true,
-  scalacOptions ++= Seq("-deprecation", "-feature"),
-  libraryDependencies +=
-    "org.scalaj" %% "scalaj-http" % "2.2.0"
-)
+libraryDependencies += "org.scalaj" %% "scalaj-http" % "2.3.0"
 
+crossSbtVersions := Seq("0.13.16", "1.0.0")
 
-lazy val publishSettings = bintrayPublishSettings ++ Seq(
-  publishMavenStyle     := false,
-  repository in bintray := "sbt-plugins",
-  bintrayOrganization in bintray := None,
-  licenses += ("MIT", url("http://opensource.org/licenses/MIT"))
-)
+publishMavenStyle := false
+bintrayRepository := "sbt-plugins"
+bintrayOrganization := Some("sbt/jetbrains")
 
-commonSettings ++ publishSettings
-
-
-versionWithGit
-
-git.baseVersion := "0.0"
-
-
-ScriptedPlugin.scriptedSettings
-
-scriptedLaunchOpts := { scriptedLaunchOpts.value ++
-    Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
-}
+//ScriptedPlugin.scriptedSettings
+scriptedLaunchOpts ++= Seq("-Xmx1024M", "-Dplugin.version=" + version.value)
 
 scriptedBufferLog := false
